tests/sintax-semanth/should_fail/program_block_not_closed.tds
program
begin
	integer fun()
		begin
			{insert code here}
		end
	void print()
		begin
			//insert code here
		end
	begin
	end